[tool.poetry]
name = "lion-service"
version = "1.0.2"
description = ""
authors = ["OceanLi <122793010+ohdearquant@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
