[project]
name = "lion-service"
version = "1.1.1"
description = "lion api service system"
authors = [
    { name = "HaiyangLi", email = "quantocean.li@gmail.com" },
    { name = "Alina Luo", email = "lluo25@fordham.edu" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocache>=0.12.3",
    "aiohttp>=3.11.10",
    "pydantic>=2.10.3",
    "tiktoken>=0.8.0",
]
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
]


[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
ignore = ["E203", "W503", "E501", "E402"]
max-line-length = 79
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
